@@ -8,9 +8,21 @@ LUA_FUNCTION(Lua_PlayerHUDHeartIsVisible) {
 	return 1;
 }
 
+LUA_FUNCTION(Lua_PlayerHUDHeartIsEternalHeartOverlayVisible) {
+	PlayerHUDHeart* heart = lua::GetUserdata<PlayerHUDHeart*>(L, 1, lua::metatables::PlayerHUDHeartMT);
+	lua_pushboolean(L, heart->_eternalHeartVisibility);
+	return 1;
+}
+
 LUA_FUNCTION(Lua_PlayerHUDHeartIsGoldenHeartOverlayVisible) {
 	PlayerHUDHeart* heart = lua::GetUserdata<PlayerHUDHeart*>(L, 1, lua::metatables::PlayerHUDHeartMT);
 	lua_pushboolean(L, heart->_goldenHeartVisibility);
+	return 1;
+}
+
+LUA_FUNCTION(Lua_PlayerHUDHeartIsFadingHeart) {
+	PlayerHUDHeart* heart = lua::GetUserdata<PlayerHUDHeart*>(L, 1, lua::metatables::PlayerHUDHeartMT);
+	lua_pushboolean(L, heart->_fadeHeart);
 	return 1;
 }
 
@@ -35,7 +47,9 @@ LUA_FUNCTION(Lua_PlayerHUDHeartGetHeartOverlayAnim) {
 static void RegisterPlayerHUDHeart(lua_State* L) {
 	luaL_Reg functions[] = {
 		{ "IsVisible", Lua_PlayerHUDHeartIsVisible },
+		{ "IsEternalHeartOverlayVisible", Lua_PlayerHUDHeartIsEternalHeartOverlayVisible },
 		{ "IsGoldenHeartOverlayVisible", Lua_PlayerHUDHeartIsGoldenHeartOverlayVisible },
+		{ "IsFadingHeart", Lua_PlayerHUDHeartIsFadingHeart },
 		{ "GetFlashType", Lua_PlayerHUDHeartGetFlashType },
 		{ "GetHeartAnim", Lua_PlayerHUDHeartGetHeartAnim },
 		{ "GetHeartOverlayAnim", Lua_PlayerHUDHeartGetHeartOverlayAnim },
