@@ -35,6 +35,9 @@ Additions:
 	- SetIsSpinAttack(bool)
 * EntityFamiliar:
 	- GetItemConfig()
+* PlayerHUDHeart:
+	- IsEternalHeartOverlayVisible
+	- IsFadingHeart
 * Enums:
 	- CambionFamiliarFlag
 * Added a new option "Extra debug render for FindInRadius". While the DebugFlag.HITSPHERES flag is enabled, debug spheres will be rendered for FindInRadius/QueryRadius calls.
